src/objects/TCU_Screen_V__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>TCU Screen V</relationshipLabel>
        <relationshipName>assm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q01_Longer_more_drugs_than_intended__c</fullName>
        <description>Did you use larger amounts of drugs or use them for a longer time&gt;than you planned or intended?</description>
        <inlineHelpText>Did you use larger amounts of drugs or use them for a longer time&gt;than you planned or intended?</inlineHelpText>
        <label>Q01 Longer/more drugs than intended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q02_Try_to_cut_down__c</fullName>
        <description>Did you try to control or cut down on your drug use but were unable to do it?</description>
        <label>Q02 Try to cut down?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q03_Spend_a_lot_of_time__c</fullName>
        <description>Did you spend a lot of time getting drugs, using them, or recovering from their use</description>
        <inlineHelpText>Did you spend a lot of time getting drugs, using them, or recovering from their use</inlineHelpText>
        <label>Q03 Spend a lot of time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q04_Strong_Desire_or_Urge__c</fullName>
        <description>Did you have a strong desire or urge to use drugs?</description>
        <inlineHelpText>Did you have a strong desire or urge to use drugs?</inlineHelpText>
        <label>Q04 Strong Desire or Urge</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q05_Kept_you_from_doing_work_school__c</fullName>
        <description>Did you get so high or sick from using drugs that it kept you from working, going to school, or caring for children?</description>
        <inlineHelpText>Did you get so high or sick from using drugs that it kept you from working, going to school, or caring for children?</inlineHelpText>
        <label>Q05 Kept you from doing work/school?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q06_Social_or_Interpersonal_Problems__c</fullName>
        <description>Did you continue using drugs even when it led to social or interpersonal problems?</description>
        <inlineHelpText>Did you continue using drugs even when it led to social or interpersonal problems?</inlineHelpText>
        <label>Q06 Social or Interpersonal Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q07_Spend_less_time_at_work__c</fullName>
        <description>Did you spend less time at work, school, or with friends because of your drug use?</description>
        <inlineHelpText>Did you spend less time at work, school, or with friends because of your drug use?</inlineHelpText>
        <label>Q07 Spend less time at work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q08_Put_in_Physical_Danger__c</fullName>
        <description>Did you use drugs that put you or others in physical danger?</description>
        <inlineHelpText>Did you use drugs that put you or others in physical danger?</inlineHelpText>
        <label>Q08 Put in Physical Danger</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q09_physical_problems__c</fullName>
        <description>Did you continue using drugs even when it was causing you physical or psychological problems?</description>
        <inlineHelpText>Did you continue using drugs even when it was causing you physical or psychological problems?</inlineHelpText>
        <label>Q09 Physical problems?_</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10a_Increase_drug_amount__c</fullName>
        <description>Did you need to increase the amount of a drug you were taking so that you could get the same effects as before</description>
        <inlineHelpText>Did you need to increase the amount of a drug you were taking so that you could get the same effects as before</inlineHelpText>
        <label>Q10a Increase drug amount?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10b_Less_Effect__c</fullName>
        <description>Did using the same amount of a drug lead to it having less of an effect as it did before?</description>
        <inlineHelpText>Did using the same amount of a drug lead to it having less of an effect as it did before?</inlineHelpText>
        <label>Q10b Less Effect</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11a_Get_sick_when_quitting__c</fullName>
        <description>Did you get sick or have withdrawal symptoms when you quit or missed taking a drug?</description>
        <inlineHelpText>Did you get sick or have withdrawal symptoms when you quit or missed taking a drug?</inlineHelpText>
        <label>Q11a Get sick when quitting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11b_Took_drugs_to_avoid_withdrawal__c</fullName>
        <description>Did you ever keep taking a drug to relieve or avoid getting sick or having withdrawal symptoms?</description>
        <inlineHelpText>Did you ever keep taking a drug to relieve or avoid getting sick or having withdrawal symptoms?</inlineHelpText>
        <label>Q11b Took drugs to avoid withdrawal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12_Most_Serious_Problem__c</fullName>
        <description>Which drug caused the most serious problem during the last 12 months?  [CHOOSE ONE]</description>
        <inlineHelpText>Which drug caused the most serious problem during the last 12 months?  [CHOOSE ONE]</inlineHelpText>
        <label>Q12 Most Serious Problem</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannaboids – Marijuana (weed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannaboids – Hashish (hash)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Marijuana (K2/Spice)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opioids – Heroin (smack)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opioids – Opium (tar)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulants – Powder Cocaine (coke)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulants – Crack Cocaine (rock)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulants – Amphetamines (speed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulants – Methmphetamines (meth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Cathinones (Bath Salts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Drugs – MDMA/GHB/Rohypnol (Ecstasy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissociative Drugs – Ketamine/PCP (Special K)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens – LSD/Mushrooms (acid)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants – Solvents (paint thinner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Medications – Depressants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Medications – Stimulants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Medications – Opioid Pain Relievers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13_How_serious_are_your_problems__c</fullName>
        <label>Q13 How serious are your problems?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considerably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13a_Alcohol__c</fullName>
        <label>Q13a Alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13b_Cannaboids_Marijuana__c</fullName>
        <description>Cannaboids – Marijuana (weed)</description>
        <inlineHelpText>Cannaboids – Marijuana (weed)</inlineHelpText>
        <label>Q13b Cannaboids - Marijuana</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13c_Cannaboids_Hashish__c</fullName>
        <description>Cannaboids – Hashish (hash)</description>
        <inlineHelpText>Cannaboids – Hashish (hash)</inlineHelpText>
        <label>Q13c Cannaboids - Hashish</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13d_Synthetic_Marijuana__c</fullName>
        <description>Synthetic Marijuana (K2/Spice)</description>
        <inlineHelpText>Synthetic Marijuana (K2/Spice)</inlineHelpText>
        <label>Q13d Synthetic Marijuana</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13e_Heroin__c</fullName>
        <description>Opioids – Heroin (smack)</description>
        <inlineHelpText>Opioids – Heroin (smack)</inlineHelpText>
        <label>Q13e Opioids - Heroin</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13f_Opium__c</fullName>
        <description>Opioids – Opium (tar)</description>
        <inlineHelpText>Opioids – Opium (tar)</inlineHelpText>
        <label>Q13f Opioids - Opium</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13g_Stimulants_Cocaine__c</fullName>
        <description>Stimulants – Powder cocaine (coke)</description>
        <inlineHelpText>Stimulants – Powder cocaine (coke)</inlineHelpText>
        <label>Q13g Stimulants - Powder Cocaine</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13h_Stimulants_Crack__c</fullName>
        <description>Stimulants – Crack Cocaine (rock)</description>
        <inlineHelpText>Stimulants – Crack Cocaine (rock)</inlineHelpText>
        <label>Q13h Stimulants - Crack Cocaine</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13i_Amphetamines__c</fullName>
        <description>Stimulants – Amphetamines (speed)</description>
        <inlineHelpText>Stimulants – Amphetamines (speed)</inlineHelpText>
        <label>Q13i  Stimulants - Amphetamines</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13j_Methamphetamine__c</fullName>
        <description>Stimulants – Methamphetamine (meth)</description>
        <inlineHelpText>Stimulants – Methamphetamine (meth)</inlineHelpText>
        <label>Q13j Stimulants - Methamphetamine</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13k_Synthetic_Cathinones__c</fullName>
        <description>Synthetic Cathinones  (Bath Salts)</description>
        <inlineHelpText>Synthetic Cathinones  (Bath Salts)</inlineHelpText>
        <label>Q13k Synthetic Cathinones</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13l_Club_Drugs__c</fullName>
        <description>Club Drugs – MDMA/GHB/Rohypnol (Ecstasy)</description>
        <inlineHelpText>Club Drugs – MDMA/GHB/Rohypnol (Ecstasy)</inlineHelpText>
        <label>Q13l Club Drugs</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13m_Dissociative__c</fullName>
        <description>Dissociative Drugs – Ketamine/PCP (Special K)</description>
        <inlineHelpText>Dissociative Drugs – Ketamine/PCP (Special K)</inlineHelpText>
        <label>Q13m Dissociative</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13n_Hallucinogens__c</fullName>
        <description>Hallucinogens – LSD/Mushrooms (acid)</description>
        <inlineHelpText>Hallucinogens – LSD/Mushrooms (acid)</inlineHelpText>
        <label>Q13n Hallucinogens</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13o_Inhalants_Solvents__c</fullName>
        <description>Inhalants – Solvents (paint thinner)</description>
        <inlineHelpText>Inhalants – Solvents (paint thinner)</inlineHelpText>
        <label>Q13o Inhalants - Solvents</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13p_Depressants__c</fullName>
        <description>Prescription Medications – Depressants</description>
        <inlineHelpText>Prescription Medications – Depressants</inlineHelpText>
        <label>Q13p Depressants</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13q_Stimulants__c</fullName>
        <description>Prescription Medications – Depressants</description>
        <inlineHelpText>Prescription Medications – Stimulants</inlineHelpText>
        <label>Q13q Stimulants</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13r_Opioids__c</fullName>
        <description>Prescription Medications – Opioid Pain Relievers</description>
        <inlineHelpText>Prescription Medications – Opioid Pain Relievers</inlineHelpText>
        <label>Q13r Opioids</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q13s_Other_drugs__c</fullName>
        <label>Q13s Other drugs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q13t_Other_drugs_frequency__c</fullName>
        <label>Q13t Other drugs frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q14_Number_of_times_in_treatment__c</fullName>
        <label>Q14 Number of times in treatment?</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or more items</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q15_How_Serious_Drug_Problems__c</fullName>
        <inlineHelpText>15. How serious do you think your drug problems are?</inlineHelpText>
        <label>Q15. How Serious Drug Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considerably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q16_How_often_did_you_inject__c</fullName>
        <label>Q16 How often did you inject?</label>
        <picklist>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q17_How_important_to_get_treatment__c</fullName>
        <label>Q17 How important to get treatment?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at al</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considerably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>CASE(TCU_Total_Score__c,
0,&quot;No Disorder&quot;,
1,&quot;No Disorder&quot;,
2,&quot;Mild disorder&quot;,
3,&quot;Mild disorder&quot;,
4,&quot;Moderate disorder&quot;,
5,&quot;Moderate disorder&quot;,
&quot;Severe Disorder&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCU_Total_Score__c</fullName>
        <description>Values from questions 1 - 11</description>
        <formula>IF(TEXT(Q01_Longer_more_drugs_than_intended__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q02_Try_to_cut_down__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q03_Spend_a_lot_of_time__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q04_Strong_Desire_or_Urge__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q05_Kept_you_from_doing_work_school__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q06_Social_or_Interpersonal_Problems__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q07_Spend_less_time_at_work__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q08_Put_in_Physical_Danger__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q09_physical_problems__c) = &apos;Yes&apos;, 1,0) + 
IF(TEXT(Q10a_Increase_drug_amount__c) = &apos;Yes&apos;, 1, IF(TEXT(Q10b_Less_Effect__c) = &apos;Yes&apos;, 1,0)) + 
IF(TEXT(Q11a_Get_sick_when_quitting__c) = &apos;Yes&apos;, 1, IF(TEXT(Q11b_Took_drugs_to_avoid_withdrawal__c) = &apos;Yes&apos;, 1,0))</formula>
        <label>TCU Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>aTCU Screen V</label>
    <nameField>
        <label>aTCU Screen V Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCU Screen V</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>